<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.ssafy.phonesin.ui.signup.SignupViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context=".ui.login.LoginFragment">

            <TextView
                android:id="@+id/TextViewEmailCheckTitle"
                style="@style/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/sign_up" />

            <TextView
                android:id="@+id/TextViewEmailCheckExplain"
                style="@style/textview_content_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/signup_email_verify_explain" />

            <TextView
                android:id="@+id/textViewEmailCheckEmail"
                style="@style/textview_content_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/signup_email_verify_number" />

            <EditText
                android:id="@+id/editTextEmailCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_log_in"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewPostNumber"
                style="@style/textview_button_white_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:background="@drawable/button_black_corner_40"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp"
                android:text="@string/signup_email_verify_post" />

            <TextView
                android:id="@+id/textViewEmailConfirm"
                style="@style/textview_button_white_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:background="@drawable/button_black_corner_40"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp"
                android:text="@string/signup_email_verify_confirm" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>