<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mobile.returnmobile.ReturnVisitDeliveryFragment">

        <TextView
            android:id="@+id/textViewVisitDeliveryMessage"
            style="@style/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/return_visit_delivery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_mobile_add_layout"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewVisitDeliveryMessage">

            <TextView
                android:id="@+id/textViewVisitDeliveryAddress"
                style="@style/textview_title_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroupReturnDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:theme="@style/MyCheckBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewVisitDeliveryAddress">

                <RadioButton
                    android:id="@+id/radioButtonVisitDeliveryExistAddress"
                    style="@style/textview_content_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/exist_address" />

                <Spinner
                    android:id="@+id/spinnerReturnAddress"
                    style="@style/textview_content_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/stroke_rectangle_key_color"
                    android:padding="10dp"
                    android:popupBackground="@color/white" />

                <RadioButton
                    android:id="@+id/radioButtonVisitDeliveryNewAddress"
                    style="@style/textview_content_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_address" />

                <EditText
                    android:id="@+id/editTextReturnAddress"
                    style="@style/textview_content_black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/stroke_rectangle_key_color"
                    android:hint="@string/hint_edit_address"
                    android:padding="10dp" />

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonPostReturnVisitDelivery"
            style="@style/textview_button_white_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_black_corner_0"
            android:text="@string/request"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>